--- a/packages/base/public/index.html
+++ b/packages/base/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Base</title>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
 </head>
 <body>
 <div id="root"></div>
