模型调试完成

--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base</title>
+    <title>App</title>
     <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
 </head>
 <body>
